<resources>
    <string name="app_name">Frency</string>
    <string name="title_home">Home</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="registration_successful">Registration successful</string>
    <string name="email_is_already_taken">Email is Already Taken</string>
    <string name="fill_the_username">Fill the username</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="minimal_8_character">Minimum 8 characters</string>
    <string name="eror_text">Minimum 8 characters</string>
    <string name="confirm_password_eror_text">Password not match</string>
    <string name="input_confirm_password">Input confirm password</string>
    <string name="network_error">Network error</string>
    <string name="username_password_is_incorrect">Username/password is incorrect</string>
    <string name="on_click_handler">Feature not implemented yet</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="choose_from">Choose From</string>
    <string name="take_photo">Take photo</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_get_camera">Failed to get camera</string>
    <string name="failed_to_get_image">Failed to get Image</string>
    <string name="no_data">No Data</string>


    <!-- Night Mode Preferences -->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>

    <!-- Language Preferences-->
    <string name="language_idn">Indonesia</string>
    <string name="language_en">English</string>
    <string name="language_def">Default</string>

    <!-- Notification -->
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Reminder when countdown has finished.</string>
    <string name="edit_account_title">Edit Profile</string>


    <string name="_1">+1</string>
    <string name="type_franchise">Type Franchise</string>
    <string name="description">Description</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="no_telephone">No Telephone</string>
    <string name="gender">Gender</string>
    <string name="register_btn">Register</string>
    <string name="detail_photo">Detail Photo</string>
    <string name="login_title">LOGIN</string>
    <string name="hi_welcome">Hi! Welcome</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_btn">Login</string>
    <string name="or">Or</string>
    <string name="not_have_account">Not have account?</string>
    <string name="login_with_google">Login with Google</string>
    <string name="register_title">REGISTER</string>
    <string name="let_s_join_us">Let\'s join us!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_any_account">Have any account?</string>
    <string name="login_here">Login here</string>
    <string name="register_with_google">Register with Google</string>
    <string name="type_">Type :</string>
    <string name="facility_">Facility :</string>
    <string name="price_">Price :</string>
    <string name="get_link">Get Link</string>
    <string name="share">Share</string>
    <string name="franchise_type">Franchise Type</string>
    <string name="recomendation">Recomendation</string>
    <string name="choose_your_franchise">Choose Your Franchise</string>
    <string name="wishlist">Wishlist</string>
    <string name="change_language_title">Change Language</string>
    <string name="change_language_summary">Select your preferred language</string>
    <string name="change_language_dialogtitle">Select Language</string>
    <string name="logout_title">Logout</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit">Edit</string>
    <string name="home_subtitle1">Franchise Type</string>
    <string name="home_subtitle2">Recomendation</string>
    <string name="home_subtitle3">Choose Your Franchise</string>
    <string name="see_all_franchises">See All Franchises</string>
    <string name="search">Search</string>
    <string name="showing_result">"Showing %1$s result "</string>
</resources>