<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="130dp"/>

    <TextView
        android:id="@+id/tv_desc_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hi_welcome"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_login"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_email"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forget_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="@id/tl_password"
        app:layout_constraintEnd_toEndOf="@id/tl_password"
        app:layout_constraintTop_toBottomOf="@id/tl_password"
        android:textAlignment="textEnd"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_btn"
        style="@style/ButtonBackground"
        app:layout_constraintEnd_toEndOf="@id/tl_password"
        app:layout_constraintStart_toStartOf="@id/tl_password"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_pass" />

    <TextView
        android:id="@+id/tv_not_have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_have_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"/>

    <View
        android:id="@+id/line_left"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        android:paddingStart="24dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toEndOf="@+id/tv_or"
        app:layout_constraintTop_toTopOf="@id/tv_or" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:paddingHorizontal="14dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_not_have_acc"/>

    <View
        android:id="@+id/line_right"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"
        app:layout_constraintEnd_toStartOf="@+id/tv_or"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toTopOf="@id/tv_or" />



    <LinearLayout
        android:id="@+id/btn_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tl_password"
        app:layout_constraintEnd_toEndOf="@id/tl_password"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        android:gravity="center"
        android:background="@drawable/button_shape"
        android:paddingVertical="8dp"
        android:layout_marginTop="24dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_google"
            android:layout_marginRight="7dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_google"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/overlay_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="#88000000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>