<?xml version="1.0" encoding="utf-8"?>
<!-- Bottom Sheet  -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="21dp"
        android:paddingTop="21dp"
        android:paddingBottom="40dp">

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/type_"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_type_inp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="7dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_type"
            app:layout_constraintTop_toTopOf="@+id/tv_type"
            tools:text="Stand" />

        <TextView
            android:id="@+id/tv_facility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/facility_"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_type" />

        <TextView
            android:id="@+id/tv_facility_inp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_facility"
            app:layout_constraintTop_toBottomOf="@+id/tv_facility"
            tools:text="@tools:sample/lorem[30]" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/price_"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_facility_inp" />

        <TextView
            android:id="@+id/tv_price_inp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="7dp"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/tv_price"
            app:layout_constraintTop_toTopOf="@+id/tv_price"
            tools:text="Rp 13.000.000" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>