<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="?attr/actionBarSize"
            tools:context=".ui.detail.DetailActivity">

            <ImageView
                android:id="@+id/bigImage"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/smallImage1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@id/smallImage2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bigImage"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/smallImage2"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@id/smallImage3"
                app:layout_constraintStart_toEndOf="@+id/smallImage1"
                app:layout_constraintTop_toBottomOf="@+id/bigImage"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/smallImage3"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/smallImage2"
                app:layout_constraintTop_toBottomOf="@+id/bigImage"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/btn_load_more"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:alpha="0.7"
                android:background="@color/black"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/_1"
                android:textSize="27sp"
                app:layout_constraintBottom_toBottomOf="@id/smallImage3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/smallImage2"
                app:layout_constraintTop_toBottomOf="@+id/bigImage" />

            <TextView
                android:id="@+id/tv_name_franchises"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="7dp"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/smallImage1"
                tools:text="Nama Franchises" />

            <CheckBox
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:button="@drawable/sl_favourite_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_price_franchises"
                app:layout_constraintEnd_toEndOf="@+id/tv_name_franchises"
                app:layout_constraintTop_toTopOf="@+id/tv_name_franchises" />

            <TextView
                android:id="@+id/tv_price_franchises"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="7dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_franchises"
                tools:text="Rp10000 - Rp10000" />

            <TextView
                android:id="@+id/tv_type_franchises"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="14dp"
                android:text="@string/type_franchise"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_price_franchises" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_type_franchise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="21dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_type_franchises"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/type_item" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="14dp"
                android:text="@string/description"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_type_franchise" />

            <TextView
                android:id="@+id/tv_desc_franchises"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="7dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc"
                tools:text="@tools:sample/lorem[30]" />

            <Button
                android:id="@+id/btn_wa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/whatsapp"
                style="@style/ButtonBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_desc_franchises"
                app:layout_constraintStart_toStartOf="@+id/tv_desc_franchises"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_franchises" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/Toolbar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="Detail"
            app:titleCentered="true"
            app:titleTextAppearance="@style/Text.SemiBold.H3"/>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Loading progress bar -->
    <FrameLayout
        android:id="@+id/overlay_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="#88000000"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>